# sound

./: CMakeLists.txt
base/include/base/: Atomic.h  Buffer.h  Defs.h  Guard.h  LoopThread.h  MemFn.h  MemFnTemplate.h  MemoryBlock.h  MemoryPool.h  Mutex.h  Packet.h  PoolAllocator.h  Singleton.h  SingletonPool.h  StaticAssert.h
base/src/: Atomic.cpp  Buffer.cpp  CMakeLists.txt  FixedMemoryPool.cpp  FixedMemoryPool.h  LoopThread.cpp  MemoryPool.cpp  Mutex.cpp  Packet.cpp
sonic/android/: build.sh
sonic/android/jni/: Android.mk  com_arcsoft_wavelink_WaveBuilder.cpp
sonic/android/src/com/arcsoft/wavelink/: WaveBuilder.java
sonic/demo/: import-summary.txt
sonic/demo/app/src/main/: AndroidManifest.xml
sonic/demo/app/src/main/java/com/arcsoft/sonic/: MainActivity.java
sonic/demo/app/src/main/res/layout/: activity_main.xml
sonic/include/sonic/: Builder.h  Listener.h
sonic/ios/: pack.sh
sonic/src/: CMakeLists.txt
sonic/src/FFTBufferManager/: FFTBufferManager.cpp  FFTBufferManager.h  Filter.cpp  Filter.h  VectorMath.cpp  VectorMath.h
sonic/src/freq_util/: bb_freq_util.cpp  bb_freq_util.h
sonic/src/transmit/: Builder.cpp  CodeQueue.cpp  CodeQueue.h  FreqParser.cpp  FreqParser.h  Listener.cpp  RSCodec.cpp  RSCodec.h  WaveBuilder.cpp  WaveBuilder.h  config.h
sonic/test/: CMakeLists.txt  common.h  test_fft.cpp  test_genwave.cpp  test_listen.cpp
