include_directories(
	${TOPDIR}/base/include/
	${TOPDIR}/sonic/src/
)

AUX_SOURCE_DIRECTORY(. DIR_SRCS)
AUX_SOURCE_DIRECTORY(transmit DIR_SRCS)
AUX_SOURCE_DIRECTORY(FFTBufferManager DIR_SRCS)
AUX_SOURCE_DIRECTORY(kiss_fft DIR_SRCS)
AUX_SOURCE_DIRECTORY(freq_util DIR_SRCS)
AUX_SOURCE_DIRECTORY(queue DIR_SRCS)
AUX_SOURCE_DIRECTORY(rscode DIR_SRCS)
ADD_LIBRARY(sonic ${DIR_SRCS})
INCLUDE_DIRECTORIES(../include)
